# tracer-game

./: .gitignore  CMakeLists.txt  README.md  build.sh
data/assets/names/: bank_first_names.txt  bank_last_names.txt  first_names.txt  last_names.txt  tech_business_prefixes.txt  tech_business_suffixes.txt
data/assets/names/organizations/: bank_prefixes.txt
src/: main.c
src/computer/: computer.c  computer.h  file.c  file.h  hardware.c  hardware.h  ip.c  ip.h  mac.c  mac.h
src/util/: hashset.c  hashset.h  names.c  names.h  random.c  random.h  util.h
src/world/: company.c  company.h  network.h  organization.c  organization.h  person.c  person.h  world.c  world.h
